test/corpus/main.txt
==============================================================================
Quickfix item
==============================================================================
tests/example.lua | 10 col 5 | This function expects 2 arguments, but is receiveing 0.
------------------------------------------------------------------------------

(quickfix_list
  (quickfix_item
    (filename)
    (range
      (row)
      (col))
    (code_block
      (content))))

==============================================================================
Quickfix item with escaped pipe
==============================================================================
example_\|_file.lua | 2 col 5  | This function is unused.
------------------------------------------------------------------------------

(quickfix_list
  (quickfix_item
    (filename)
    (range
      (row)
      (col))
    (code_block
      (content))))

==============================================================================
Quickfix item with entry type
==============================================================================
example.lua       | 2 col 5 error | Missing expression '('.
------------------------------------------------------------------------------

(quickfix_list
  (quickfix_item
    (filename)
    (range
      (row)
      (col)
      (item_type))
    (code_block
      (content))))

==============================================================================
Quickfix item with ranges
==============================================================================
example.lua       | 2-5 col 0-5 | Some message.
------------------------------------------------------------------------------

(quickfix_list
  (quickfix_item
    (filename)
    (range
      (row)
      (col))
    (code_block
      (content))))

==============================================================================
Quickfix item with filetype
==============================================================================
example.lua       | 5 col 5 | >!lua!< local R = 5;
------------------------------------------------------------------------------

(quickfix_list
  (quickfix_item
    (filename)
    (range
      (row)
      (col))
    (code_block
      (language_delimiter)
      (content))))

